basic flow; with separate details/kb ready

--- a/_sass/modern-resume-theme.scss
+++ b/_sass/modern-resume-theme.scss
@@ -4,17 +4,8 @@
 @import "dark";
 @import "icons";
 
-.header-right p {
-  margin-bottom: 3px;
-}
-
-.header-right a{
-  color:inherit;
-  font-weight:500;
-}
-
 @media screen and (max-width: 768px) {
-  .header-contianer div{
+  .header-container div{
     text-align: center;
   }
 
@@ -136,22 +127,6 @@
   .details {
     text-align: center;
   }
-}
-
-.footer-container {
-  margin-top:100px;
-}
-
-.footer-container p {
-  text-align: center;
-  font-style: italic;
-  font-weight: 300;
-}
-
-.footer-container a {
-  color: inherit;
-  font-style: italic;
-  font-weight: 300;
 }
 
 .page-content {
