--- a/_layouts/detail.html
+++ b/_layouts/detail.html
@@ -32,18 +32,34 @@
 				<section class="top-bar">
 					{% include navigation.html %}
 				</section>
-				<section class="hero_search">
-					<h1>Knowledgebase</h1>
-					{% include search.html %}
-				</section>
 			</div>
 
 		</header>
 		<section class="content">
 			<div class="wrapper">
-				{{ content }}
+				{%- if jekyll.environment == 'production' and site.gtm -%}
+					{%- include gtm_body.html -%}
+				{%- endif -%}
+
+				{%- include about.html -%}
+
+				{%- if site.data.projects_detail.size > 0 -%}
+					{%- include projects.html -%}
+				{%- endif -%}
+
+				{%- if site.data.experience_detail.size > 0 -%}
+					{%- include experience.html -%}
+				{%- endif -%}
+
+				{%- if site.data.education_detail.size > 0 -%}
+					{%- include education.html -%}
+				{%- endif -%}
+
+				{%- if site.more_content_detail -%}
+					{%- include more.html -%}
+				{%- endif -%}
 			</div>
-		</section>
+		</main>
 
 		{% include footer.html %}
 		<script>
