move more customizations out of _config and into individual _data

--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -41,7 +41,9 @@
 					{%- include gtm_body.html -%}
 				{%- endif -%}
 
-				{%- include about.html -%}
+				{%- if site.data.about.content -%}
+					{%- include about.html -%}
+				{%- endif -%}
 
 				{%- if site.data.projects.size > 0 -%}
 					{%- include projects.html -%}
@@ -55,7 +57,7 @@
 					{%- include education.html -%}
 				{%- endif -%}
 
-				{%- if site.more_content -%}
+				{%- if site.data.more.content -%}
 					{%- include more.html -%}
 				{%- endif -%}
 			</div>
