--- a/_includes/about.html
+++ b/_includes/about.html
@@ -1,5 +1,5 @@
 <div class="container intro-container">
-  <h3>{{ site.about_title | default: "About Me" }}</h3>
+  <h3>{{ site.data.about.title | default: "About Me" }}</h3>
   <div class="row clearfix">
     {%- if site.about_profile_image -%}
       <div class="col-xs-12 col-sm-4 col-md-3 no-print">
@@ -7,7 +7,7 @@
       </div>
     {%- endif -%}
     <div class="{{ 'col-xs-12 ' }}{%- if site.about_profile_image -%}col-sm-8 col-md-9 col-print-12{%- endif -%}">
-      {{ site.about_content | strip | markdownify }}
+      {{ site.data.about.content | strip | markdownify }}
     </div>
   </div>
 </div>
