--- a/_layouts/detail.html
+++ b/_layouts/detail.html
@@ -43,6 +43,8 @@
 
 				{%- include about.html -%}
 
+				{%- include bio.html -%}
+
 				{%- if site.data.projects_detail.size > 0 -%}
 					{%- include projects.html -%}
 				{%- endif -%}
